# oxideav-mp3

./: CHANGELOG.md  Cargo.toml  NOTICES.md  README.md
.github/workflows/: ci.yml
src/: bitreader.rs  block_type.rs  container.rs  decoder.rs  encoder.rs  fft.rs  frame.rs  huffman.rs  lib.rs  mdct.rs  psy.rs  psy1.rs  psy2.rs  requantize.rs  scalefactor.rs  sfband.rs  sideinfo.rs  window.rs
tests/: docs_corpus.rs  encoder_intensity_stereo.rs  encoder_intensity_stereo_mpeg2.rs  encoder_joint_stereo.rs  encoder_psy1.rs  encoder_psy2.rs  encoder_roundtrip.rs  encoder_short_blocks.rs  encoder_vbr.rs  mpeg2_lsf_decode.rs  pipeline_comparison.rs  reference_clips.rs  tag_parse.rs
