[package]
name = "oxideav-mp3"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mp3"
authors = ["Mark Karpeles"]
description = "Pure-Rust MPEG-1/2 Audio Layer III (MP3) decoder + minimum-viable CBR encoder"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mp3"
keywords = ["multimedia", "audio", "mp3", "mpeg", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
oxideav-id3 = "0.0"
# Shared synthesis window D[] lives upstream in the MP1 crate — both
# layers read the same ISO 11172-3 Table 3-B.3, so MP3 re-exports
# MP1's constant rather than shipping a second copy.
oxideav-mp1 = "0.0"
